--- a/CedarCMS/Web.config
+++ b/CedarCMS/Web.config
@@ -5,11 +5,12 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CedarCMS-20160119093852.mdf;Initial Catalog=aspnet-CedarCMS-20160119093852;Integrated Security=True" providerName="System.Data.SqlClient" />
+     <add name="DefaultConnection" connectionString=" MultipleActiveResultSets=True; Data Source=79.175.163.31;Initial Catalog=CedarTemp;User ID=TempAdmin;Password=Cedar@34914" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
